# pokemon-trade-spoofer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bgb_link_server.py  main.py  models.py  pokemon.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  trading_state_machine.py
desktop-app/: .eslintrc.js  .gitignore  forge.config.ts  package-lock.json  package.json  tailwind.config.js  webpack.plugins.ts  webpack.renderer.config.ts
desktop-app/src/common/: constants.ts  models.ts
desktop-app/src/main/: index.ts  preload.ts
desktop-app/src/renderer/: App.tsx  index.css  index.html  store.ts  types.ts
desktop-app/src/renderer/components/: BackendStates.tsx  ButtonTooltip.tsx  Controls.tsx  EmptySlot.tsx  PokemonParty.tsx  PokemonSlot.tsx  SelectPokemonDialog.tsx  Slot.tsx  TrainerInput.tsx
desktop-app/src/renderer/hooks/: backends.ts
electron-frontend/: .eslintrc.yml  .gitignore  forge.config.ts  package-lock.json  package.json  py.spec  webpack.main.config.ts  webpack.plugins.ts
electron-frontend/src/common/: constants.ts  models.ts
electron-frontend/src/main/: index.ts  preload.ts
electron-frontend/src/renderer/: index.css  index.html  renderer.ts
pkm_trade_spoofer/: __init__.py  __main__.py  _types.py  api.py  bgb_link_server.py  cli.py  logger.py  models.py  pokemon.py  trading_state_machine.py
pkm_trade_spoofer/backend/bgb/: __init__.py  bgb.py  bgb_link_server.py
pkm_trade_spoofer/configs/: logging.yaml
pkm_trade_spoofer/utils/: __init__.py  pokemon.py
